Modified url of banner's image

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -48,7 +48,7 @@ body {
 }
 
 .jumbotron {
-	background-image: url('https://www.dropbox.com/s/s3z0i0wji56z13y/jumbotron.jpg?dl=0');
+	background-image: url('https://dl.dropboxusercontent.com/s/s3z0i0wji56z13y/jumbotron.jpg?dl=0');
 	height: 317px;
 	h1 {
 	    text-align: center;
